--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -142,7 +142,10 @@
     "    to_export = defaultdict(list)\n",
     "    \n",
     "    for code in code_iter(nb):\n",
-    "        if match := re.match(r'''# exp (.+)\\n''', code[0]):\n",
+    "        # Can't get python 3.8 to work with github CI\n",
+    "        # if match := re.match(r'''# exp (.+)\\n''', code[0]):\n",
+    "        match = re.match(r'''# exp (.+)\\n''', code[0])\n",
+    "        if match:\n",
     "            target = match.group(1)\n",
     "            content = ''.join(code[1:])\n",
     "            if pre is not None:\n",
