moved pathlib import to exported cell

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -18,16 +18,8 @@
     "# export\n",
     "import json\n",
     "import re\n",
-    "from collections import defaultdict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# hide\n",
+    "from collections import defaultdict\n",
+    "\n",
     "from pathlib import Path"
    ]
   },
