--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -198,7 +198,7 @@
     "    regular = []\n",
     "\n",
     "    for file in merged.keys():\n",
-    "        for cell in merged['common']:\n",
+    "        for cell in merged[file]:\n",
     "            if 'import ' in cell:\n",
     "                imports.append(cell)\n",
     "            else:\n",
@@ -242,6 +242,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
